Code improvements, clean-ups and replacement of deprecated methods